Item15110: update to PhotoSwipe 4.1.3

--- a/pub/System/JQPhotoSwipeContrib/Makefile
+++ b/pub/System/JQPhotoSwipeContrib/Makefile
@@ -47,5 +47,6 @@ clean:
 	      default-skin.* \
 	      pkg.uncompressed.css \
 	      pkg.uncompressed.js \
+	      igp_* \
 	      $(TARGET) *.gz
 
